compiler-core/src/parse/snapshots/gleam_core__parse__tests__case_expression_without_body.snap
---
source: compiler-core/src/parse/tests.rs
expression: case a
snapshot_kind: text
---
[
    Expression(
        Case {
            location: SrcSpan {
                start: 0,
                end: 6,
            },
            subjects: [
                Var {
                    location: SrcSpan {
                        start: 5,
                        end: 6,
                    },
                    name: "a",
                },
            ],
            clauses: None,
        },
    ),
]
