compiler-core/src/parse/snapshots/gleam_core__parse__tests__const_invalid_bit_array_segment.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nconst a = <<1, 2, <->>\n"
snapshot_kind: text
---
----- SOURCE CODE

const a = <<1, 2, <->>


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:19
  │
2 │ const a = <<1, 2, <->>
  │                   ^^ I was not expecting this

Found `<-`, expected one of: 
- `>>`
- a bit array segment
