compiler-core/src/parse/snapshots/gleam_core__parse__tests__const_with_function_call.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn wibble() { 123 }\nconst wib: Int = wibble()\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn wibble() { 123 }
const wib: Int = wibble()


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:18
  │
3 │ const wib: Int = wibble()
  │                  ^^^^^^^ Functions can only be called within other functions
